--- a/artemis-protocols/artemis-mqtt-protocol/pom.xml
+++ b/artemis-protocols/artemis-mqtt-protocol/pom.xml
@@ -21,6 +21,7 @@
       <version>2.1.0</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
+   <version>2.1.0.fixed</version>
 
    <artifactId>artemis-mqtt-protocol</artifactId>
    <packaging>bundle</packaging>
@@ -42,7 +43,7 @@
       <dependency>
          <groupId>org.apache.activemq</groupId>
          <artifactId>artemis-server</artifactId>
-         <version>${project.version}</version>
+         <version>2.1.0</version>
       </dependency>
       <dependency>
          <groupId>io.netty</groupId>
